refactor: type approval rule contracts
