# apps/web/apps/web-antd/src/api/generated/infra.openapi.json
@@ -3960,7 +3960,9 @@
         "requestBody": {
           "content": {
             "application/json": {
-              "schema": true
+              "schema": {
+                "$ref": "#/components/schemas/CreateApprovalRuleRequest"
+              }
             }
           },
           "required": true
@@ -3984,7 +3986,9 @@
         "requestBody": {
           "content": {
             "application/json": {
-              "schema": true
+              "schema": {
+                "$ref": "#/components/schemas/UpdateApprovalRuleRequest"
+              }
             }
           },
           "required": true
@@ -4992,6 +4996,60 @@
         "additionalProperties": false,
         "required": [
           "approved"
+        ]
+      },
+      "CreateApprovalRuleRequest": {
+        "type": "object",
+        "properties": {
+          "autoProvision": {
+            "type": "boolean",
+            "default": false
+          },
+          "maxCpuCores": {
+            "type": [
+              "integer",
+              "null"
+            ],
+            "format": "int32"
+          },
+          "maxMemoryGb": {
+            "type": [
+              "integer",
+              "null"
+            ],
+            "format": "int32"
+          },
+          "maxResourceCount": {
+            "type": [
+              "integer",
+              "null"
+            ],
+            "format": "int32"
+          },
+          "name": {
+            "type": "string"
+          },
+          "remarks": {
+            "type": [
+              "string",
+              "null"
+            ]
+          },
+          "resourceType": {
+            "type": "string",
+            "default": ""
+          },
+          "status": {
+            "type": "integer",
+            "format": "int16",
+            "default": 0,
+            "maximum": 32767,
+            "minimum": -32768
+          }
+        },
+        "additionalProperties": false,
+        "required": [
+          "name"
         ]
       },
       "CreateNetworkZoneRequest": {
@@ -6152,6 +6210,65 @@
           "message",
           "targetIp",
           "ports"
+        ]
+      },
+      "UpdateApprovalRuleRequest": {
+        "type": "object",
+        "properties": {
+          "autoProvision": {
+            "type": "boolean",
+            "default": false
+          },
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "maxCpuCores": {
+            "type": [
+              "integer",
+              "null"
+            ],
+            "format": "int32"
+          },
+          "maxMemoryGb": {
+            "type": [
+              "integer",
+              "null"
+            ],
+            "format": "int32"
+          },
+          "maxResourceCount": {
+            "type": [
+              "integer",
+              "null"
+            ],
+            "format": "int32"
+          },
+          "name": {
+            "type": "string"
+          },
+          "remarks": {
+            "type": [
+              "string",
+              "null"
+            ]
+          },
+          "resourceType": {
+            "type": "string",
+            "default": ""
+          },
+          "status": {
+            "type": "integer",
+            "format": "int16",
+            "default": 0,
+            "maximum": 32767,
+            "minimum": -32768
+          }
+        },
+        "additionalProperties": false,
+        "required": [
+          "id",
+          "name"
         ]
       },
       "UpdateNetworkZoneRequest": {
